[gd_scene load_steps=8 format=2]

[ext_resource path="res://esc_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/snowfall/snowfall.tscn" type="PackedScene" id=3]
[ext_resource path="res://settings.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/gui/exit.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/settings.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/resume.png" type="Texture" id=11]

[node name="esc_menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color( 0.423529, 0.423529, 0.423529, 0.164706 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( -5, 889 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
region_rect = Rect2( 0, 0, 1024, 600 )

[node name="main" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -132.0
margin_right = 998.0
margin_bottom = 1252.0
rect_scale = Vector2( 0.2, 0.2 )
custom_constants/separation = 202
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="CanvasLayer/main/VBoxContainer"]
margin_left = 58.0
margin_right = 1060.0
margin_bottom = 322.0
size_flags_horizontal = 4
texture_normal = ExtResource( 11 )

[node name="Button2" type="TextureButton" parent="CanvasLayer/main/VBoxContainer"]
margin_top = 524.0
margin_right = 1119.0
margin_bottom = 845.0
size_flags_horizontal = 4
texture_normal = ExtResource( 10 )

[node name="Button3" type="TextureButton" parent="CanvasLayer/main/VBoxContainer"]
margin_left = 174.0
margin_top = 1047.0
margin_right = 944.0
margin_bottom = 1384.0
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )

[node name="settings" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="snowfall" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="visibility_changed" from="." to="." method="_on_esc_menu_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/main/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/main/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/main/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="back" from="CanvasLayer/settings" to="." method="_on_settings_back"]
